--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
             <a-entity
             position="0 -1 0"
             scale="0.05 0.05 0.05"
-            gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+            <a-assets>
+    <video id="penguin-sledding" autoplay loop="true" src="https://s22.trafficdeposit.com/vidi/41f0p98za9y5cz28h4pze1t69/Jy1tsHWqUQf78bvJW1OJ5A/1615001315/5ff1a4c831693/5ffd5bba5bc78.vid"></video>
+  </a-assets>
+
+  <!-- Using the asset management system. -->
+  <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -20"></a-video>
+
+  
             ></a-entity>
         </a-marker>
         <a-entity camera></a-entity>
