--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             position="0 -1 0"
             scale="0.05 0.05 0.05"
             <a-assets>
-    <video id="penguin-sledding" autoplay loop="true" src="https://s22.trafficdeposit.com/vidi/41f0p98za9y5cz28h4pze1t69/Jy1tsHWqUQf78bvJW1OJ5A/1615001315/5ff1a4c831693/5ffd5bba5bc78.vid"></video>
+    <video id="penguin-sledding" autoplay loop="true" src="test.mp4"></video>
   </a-assets>
 
   <!-- Using the asset management system. -->
