--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </a-assets>
 
   <!-- Using the asset management system. -->
-  
+  <a-video src="#penguin-sledding" width="16" height="9" position="0 0 -50"></a-video>
 
   
             ></a-entity>
