--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             position="0 -1 0"
             scale="0.15 0.15 0.15"
             <a-assets>
-    <video id="penguin-sledding" autoplay loop="true" src="heart_1.mp4"></video>
+    <video id="penguin-sledding" autoplay loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video>
   </a-assets>
 
   <!-- Using the asset management system. -->
