--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
             position="0 -1 0"
             scale="0.15 0.15 0.15"
             <a-assets>
-    <!-- <video id="penguin-sledding" autoplay loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video> -->
-            <img id="my-image" src="test.jpg">
+    <video id="penguin-sledding" autoplay loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video> 
+           <!--  <img id="my-image" src="test.jpg">-->
   </a-assets>
 
   <!-- Using the asset management system. -->
-  <!--   <a-video src="#penguin-sledding" width="16" height="9" position="0 10 -10"></a-video> -->
-<a-image src="#my-image" width="16" height="16" position="0 10 -10"></a-image>
+   <a-video src="#penguin-sledding" width="16" height="16" position="0 10 -10"></a-video>
+ <!-- <a-image src="#my-image" width="16" height="16" position="0 10 -10"></a-image> -->
   
             ></a-entity>
         </a-marker>
