--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
             position="0 -1 0"
             scale="0.15 0.15 0.15"
             <a-assets>
- <video id="heart" autoplay controls="controls" loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video>
+ <video id="heart" autoplay="false" controls="controls" loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video>
   
    </a-assets>
 
