--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,7 @@
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <body style="margin : 0px; overflow: hidden;">
+        <button onclick="playVid()" type="button">Play Video</button>
         <a-scene embedded arjs>
         <a-marker preset="hiro">
             <a-entity
@@ -13,7 +14,13 @@
             scale="0.15 0.15 0.15"
             <a-assets>
  <video id="heart" autoplay="false" controls="controls" loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video>
-  
+  <script> 
+var vid = document.getElementById("myVideo"); 
+
+function playVid() { 
+  vid.play(); 
+} 
+</script> 
    </a-assets>
 
    <!-- Using the asset management system. -->
