--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
             <a-assets>
  <video id="heart" autoplay="false" controls="controls" loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video>
   <script> 
-var vid = document.getElementById("myVideo"); 
+var vid = document.getElementById("heart"); 
 
 function playVid() { 
   vid.play(); 
