--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <script>  var vid = document.getElementById("heart"); 
-    function playVid() { 
-      vid.play(); 
-    } </script> 
+     <script>
+    window.onload = function () {
+      document
+        .querySelector(".button")
+        .addEventListener("click", function () {
+          // here you can change also a-scene or a-entity properties, like
+          // changing your 3D model source, size, position and so on
+          // or you can just open links, trigger actions...
+          alert("Hi there!");
+        });
+    };
+  </script>
     <style>
       .buttons {
         position: absolute;
@@ -46,7 +54,7 @@
             position="0 -1 0"
             scale="0.15 0.15 0.15"
             <a-assets>
- <video id="heart" autoplay controls="controls" loop="true" src="heart_1.mp4" webkit-playsinline playsinline></video>
+ <video id="heart" onclick="playVid()"loop="true" src="heart_1.mp4" playsinline></video>
 
    </a-assets>
 
