--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </style>
     
     <div class="buttons">
-    <button onclick="playVid()" type="button">Play Video</button>
+    <button class="button">Play Video</button>
     </div>
   
     <body style="margin : 0px; overflow: hidden;">
