--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
           // here you can change also a-scene or a-entity properties, like
           // changing your 3D model source, size, position and so on
           // or you can just open links, trigger actions...
-          alert("Hi there!");
+          playVid() { 
+      vid.play(); 
         });
     };
   </script>
