--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
           // here you can change also a-scene or a-entity properties, like
           // changing your 3D model source, size, position and so on
           // or you can just open links, trigger actions...
-          playVid() { 
-      vid.play(); 
+          var vid = document.getElementById("heart"); 
+
+function playVid() { 
+  vid.play(); 
         });
-    };
+    }; 
   </script>
     <style>
       .buttons {
