--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ function pauseVid() {
             position="0 -1 0"
             scale="0.15 0.15 0.15"
             <a-assets>
- <video id="heart" onclick="playVid()"loop="true" src="heart_1.mp4" playsinline></video>
+ <video id="heart" autoplay controls="controls" loop="true" src="heart_1.mp4" playsinline></video>
 
    </a-assets>
 
