--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <a-asset-item id="buni-mtl" src="/nik,grv3.mtl"></a-asset-item>
     <a-asset-item id="buni-obj" src="/nik,grv3.obj"></a-asset-item>
   </a-assets>
-            obj-model="obj: #buni-obj; mtl: #buni-mtl"
+           
    <!-- Using the asset management system. -->
 
- <a-video src="#heart" width="16" height="9" position="0 10 -10"></a-video>
+<a-obj-model src="#buni-obj" mtl="#buni-mtl" position="0 0 0"></a-obj-model>
 
   
             ></a-entity>
