--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-        <a-scene embedded arjs>
-            <a-marker preset="hiro">
+        <a-scene embedded arjs='sourceType: webcam;'>
                 <a-assets>
-                    <a-entity position="0 -1 0" scale="0.15 0.15 0.15"></a-entity>
                         <a-asset-item id="buni-mtl" src="/nik,grv3.mtl"></a-asset-item>
                         <a-asset-item id="buni-obj" src="/nik,grv3.obj"></a-asset-item>
                 </a-assets>
                 <!-- Using the asset management system. -->
-                <a-entity obj-model="obj: #ship-obj; mtl: #ship-mtl"></a-entity>
-                </a-marker>
-                <a-entity camera></a-entity>
-                
+                <a-entity obj-model="obj: #buni-obj; mtl: #buni-mtl"></a-entity>
+                <a-marker-camera preset"hiro"></a-marker-camera>
         </a-scene>
 </body>
 </html>
-
-
