--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
-<script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+<html> 
+<meta name="apple-mobile-web-app-capable" content="yes">
+<script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
+    
+    <!-- we import arjs version without NFT but with marker + location based support -->
+ <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-        <a-scene embedded arjs='sourceType: webcam;'>
-                <a-assets>
+<a-scene embedded arjs>
+	<a-assets>
                         <a-asset-item id="buni-mtl" src="/nik,grv3.mtl"></a-asset-item>
                         <a-asset-item id="buni-obj" src="/nik,grv3.obj"></a-asset-item>
-                </a-assets>
-                <!-- Using the asset management system. -->
-                <a-entity obj-model="obj: #buni-obj; mtl: #buni-mtl"></a-entity>
-                <a-marker-camera preset"hiro"></a-marker-camera>
-        </a-scene>
+                </a-assets>	
+        <a-marker preset="hiro">
+			<a-entity
+				position="0 0 0"
+				scale="0.1 0.1 0.1"
+				obj-model="obj: #buni-obj; mtl: #buni-mtl"
+			></a-entity>
+		</a-marker>
+		<a-entity camera></a-entity>
+	</a-scene>
 </body>
 </html>
