--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
-<html> 
-<meta name="apple-mobile-web-app-capable" content="yes">
-<script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
-    
-    <!-- we import arjs version without NFT but with marker + location based support -->
- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-<body style='margin : 0px; overflow: hidden;'>
-<a-scene embedded arjs>
-	<a-assets>
-                        <a-asset-item id="buni-mtl" src="/nik,grv3.mtl"></a-asset-item>
-                        <a-asset-item id="buni-obj" src="/nik,grv3.obj"></a-asset-item>
-                </a-assets>	
-        <a-marker preset="hiro">
-			<a-entity
-				position="0 0 0"
-				scale="0.1 0.1 0.1"
-				obj-model="obj: #buni-obj; mtl: #buni-mtl"
-			></a-entity>
-		</a-marker>
-		<a-entity camera></a-entity>
-	</a-scene>
-</body>
+<html>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <!-- we import arjs version without NFT but with marker + location based support -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded arjs>
+      <a-marker preset="hiro">
+        <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        ></a-entity>
+      </a-marker>
+      <a-entity camera></a-entity>
+    </a-scene>
+  </body>
 </html>
