--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
-          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+          obj-model="obj: url(https://github.com/nikior9/artest/blob/bc5a5e6b7a741cd260b0f02a27d26023ef2d9606/nik,grv3.obj); 
+            mtl: url(https://github.com/nikior9/artest/blob/bc5a5e6b7a741cd260b0f02a27d26023ef2d9606/nik,grv3.mtl)"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
