--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-assets>          
-  <a-asset-item id="buni-mtl" src="/nik,grv3.mtl"></a-asset-item>
-  <a-asset-item id="buni-obj" src="/nik,grv3.obj"></a-asset-item>
+  <a-asset-item id="buni-mtl" src="nik,grv3.mtl"></a-asset-item>
+  <a-asset-item id="buni-obj" src="nik,grv3.obj"></a-asset-item>
   </a-assets>
       <a-marker preset="hiro">
         
