--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
-      <a-assets>          
-  <a-asset-item id="buni-mtl" src="nik,grv3.mtl"></a-asset-item>
-  <a-asset-item id="buni-obj" src="nik,grv3.obj"></a-asset-item>
-  </a-assets>
-      <a-marker preset="hiro">
-        
-<a-entity obj-model="obj: #buni-obj; mtl: #buni-mtl"></a-entity>
+      <a-marker preset="hiro">     
+<a-entity 
+          position="-1 0 0"
+          scale="0.01 0.01 0.01"
+          gltf-model="url(test.gltf)"></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
