--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">     
 <a-entity 
-          position="1 1 0"
+          gltf-model="url(https://github.com/nikior9/artest/blob/3a626d61e17f404cf65886004f1f0d0daae199cd/test.gltf)"
+          position="0 0 0"
           scale="1 1 1"
-          gltf-model="url(https://github.com/nikior9/artest/blob/3a626d61e17f404cf65886004f1f0d0daae199cd/test.gltf)"></a-entity>
+          ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
